log
Fri Mar 27 05:47:31 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
254817d
Fri Mar 27 05:56:42 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:21: error: invalid initializer
   79 |     Node new_node = createNode(data);
      |                     ^~~~~~~~~~
list.c:80:13: error: invalid type argument of ‘->’ (have ‘Node’)
   80 |     new_node->prev = list->current;
      |             ^~
list.c:81:13: error: invalid type argument of ‘->’ (have ‘Node’)
   81 |     new_node->next = list->current->next;
      |             ^~
list.c:82:33: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   82 |     list->current->next->prev = new_node;
      |                                 ^~~~~~~~
list.c:83:27: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   83 |     list->current->next = new_node;
      |                           ^~~~~~~~
254d7cd
Fri Mar 27 05:57:15 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a6b567e
Fri Mar 27 06:00:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:33: error: dereferencing ‘void *’ pointer [-Werror]
   79 |     Node *new_node = createNode(*data);
      |                                 ^~~~~
list.c:79:33: error: invalid use of void expression
cc1: all warnings being treated as errors
f8c7076
Fri Mar 27 06:00:37 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
becb0ac
Fri Mar 27 06:01:22 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:21: error: invalid initializer
   79 |     Node new_node = createNode(data);
      |                     ^~~~~~~~~~
list.c:80:13: error: invalid type argument of ‘->’ (have ‘Node’)
   80 |     new_node->prev = list->current;
      |             ^~
list.c:81:13: error: invalid type argument of ‘->’ (have ‘Node’)
   81 |     new_node->next = list->current->next;
      |             ^~
list.c:82:33: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   82 |     list->current->next->prev = new_node;
      |                                 ^~~~~~~~
list.c:83:27: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   83 |     list->current->next = new_node;
      |                           ^~~~~~~~
6f5f92c
Fri Mar 27 06:02:17 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e4a418b
Fri Mar 27 06:02:29 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:80:17: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   80 |     *new_node = createNode(data);
      |                 ^~~~~~~~~~
cd90879
Fri Mar 27 06:04:38 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
b087050
Fri Mar 27 06:07:22 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b1515b0
Fri Mar 27 06:08:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
05dc914
Fri Mar 27 06:11:48 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:81:16: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   81 |         return 1;
      |                ^
list.c:78:6: note: declared here
   78 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
d96a5d7
Fri Mar 27 06:12:25 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
487bd91
Fri Mar 27 06:17:39 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
c125e7b
Fri Mar 27 06:18:31 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
97c7a7a
Fri Mar 27 06:20:03 PM UTC 2026: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|6
total_score: 0/60
518fdcd
Fri Mar 27 06:20:53 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
72400e0
Fri Mar 27 06:21:49 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7c7a7d3
Fri Mar 27 06:22:47 PM UTC 2026: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
52462f1
Fri Mar 27 06:23:36 PM UTC 2026: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
b1ce339
Fri Mar 27 06:24:34 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
629aeb4
Fri Mar 27 06:26:01 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:83:5: error: expected expression before ‘}’ token
   83 |     }
      |     ^
list.c:83:5: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
list.c:78:6: note: declared here
   78 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
3bd98fb
Fri Mar 27 06:26:17 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
c37daad
Fri Mar 27 06:27:25 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
3962426
Fri Mar 27 06:28:58 PM UTC 2026: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
638bc8d
Fri Mar 27 06:31:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
60828bc
Fri Mar 27 06:34:18 PM UTC 2026: 
 list.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/60
18481f6
Fri Mar 27 06:34:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
38d58d1
